// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`cursor-1.js - {"endOfLine":"auto"} format 1`] = `
====================================options=====================================
cursorOffset: 26
endOfLine: "auto"
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
(function(){return        <|>15})()<LF>

=====================================output=====================================
(function () {<LF>
  return <|>15;<LF>
})();<LF>

================================================================================
`;

exports[`cursor-1.js - {"endOfLine":"cr"} format 1`] = `
====================================options=====================================
cursorOffset: 26
endOfLine: "cr"
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
(function(){return        <|>15})()<LF>

=====================================output=====================================
(function () {<CR>
  return <|>15;<CR>
})();<CR>

================================================================================
`;

exports[`cursor-1.js - {"endOfLine":"crlf"} format 1`] = `
====================================options=====================================
cursorOffset: 26
endOfLine: "crlf"
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
(function(){return        <|>15})()<LF>

=====================================output=====================================
(function () {<CRLF>
  return <|>15;<CRLF>
})();<CRLF>

================================================================================
`;

exports[`cursor-1.js - {"endOfLine":"lf"} format 1`] = `
====================================options=====================================
cursorOffset: 26
endOfLine: "lf"
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
(function(){return        <|>15})()<LF>

=====================================output=====================================
(function () {<LF>
  return <|>15;<LF>
})();<LF>

================================================================================
`;

exports[`cursor-and-range.js - {"endOfLine":"auto"} format 1`] = `
    : ====================================options=====================================
    : cursorOffset: 21
    : endOfLine: "auto"
    : parsers: ["babel"]
    : rangeEnd: 26
    : rangeStart: 10
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 |<LF>
  2 |<LF>
> 3 | class    a {<LF>
    |         ^^^^<LF>
> 4 |   b(  <|> ) {}<LF>
    | ^^^^^^^^^^^^^^<LF>
  5 | }<LF>
  6 |<LF>
  7 | let    x
    : =====================================output=====================================
    : <LF>
    : <LF>
    : class a {<LF>
    :   b(<|>) {}<LF>
    : }<LF>
    : <LF>
    : let    x
    : ================================================================================
`;

exports[`cursor-and-range.js - {"endOfLine":"cr"} format 1`] = `
    : ====================================options=====================================
    : cursorOffset: 21
    : endOfLine: "cr"
    : parsers: ["babel"]
    : rangeEnd: 26
    : rangeStart: 10
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 |<LF>
  2 |<LF>
> 3 | class    a {<LF>
    |         ^^^^<LF>
> 4 |   b(  <|> ) {}<LF>
    | ^^^^^^^^^^^^^^<LF>
  5 | }<LF>
  6 |<LF>
  7 | let    x
    : =====================================output=====================================
    : <CR>
    : <CR>
    : class a {<CR>
    :   b(<|>) {}<CR>
    : }<CR>
    : <CR>
    : let    x
    : ================================================================================
`;

exports[`cursor-and-range.js - {"endOfLine":"crlf"} format 1`] = `
    : ====================================options=====================================
    : cursorOffset: 21
    : endOfLine: "crlf"
    : parsers: ["babel"]
    : rangeEnd: 26
    : rangeStart: 10
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 |<LF>
  2 |<LF>
> 3 | class    a {<LF>
    |         ^^^^<LF>
> 4 |   b(  <|> ) {}<LF>
    | ^^^^^^^^^^^^^^<LF>
  5 | }<LF>
  6 |<LF>
  7 | let    x
    : =====================================output=====================================
    : <CRLF>
    : <CRLF>
    : class a {<CRLF>
    :   b(<|>) {}<CRLF>
    : }<CRLF>
    : <CRLF>
    : let    x
    : ================================================================================
`;

exports[`cursor-and-range.js - {"endOfLine":"lf"} format 1`] = `
    : ====================================options=====================================
    : cursorOffset: 21
    : endOfLine: "lf"
    : parsers: ["babel"]
    : rangeEnd: 26
    : rangeStart: 10
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 |<LF>
  2 |<LF>
> 3 | class    a {<LF>
    |         ^^^^<LF>
> 4 |   b(  <|> ) {}<LF>
    | ^^^^^^^^^^^^^^<LF>
  5 | }<LF>
  6 |<LF>
  7 | let    x
    : =====================================output=====================================
    : <LF>
    : <LF>
    : class a {<LF>
    :   b(<|>) {}<LF>
    : }<LF>
    : <LF>
    : let    x
    : ================================================================================
`;

exports[`range-1.js - {"endOfLine":"auto"} format 1`] = `
    : ====================================options=====================================
    : endOfLine: "auto"
    : parsers: ["babel"]
    : rangeEnd: 26
    : rangeStart: 10
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 |<LF>
  2 |<LF>
> 3 | class    a {<LF>
    |         ^^^^<LF>
> 4 |   b(   ) {}<LF>
    | ^^^^^^^^^^^<LF>
  5 | }<LF>
  6 |<LF>
  7 | let    x<LF>
  8 |
    : =====================================output=====================================
    : <LF>
    : <LF>
    : class a {<LF>
    :   b() {}<LF>
    : }<LF>
    : <LF>
    : let    x<LF>
    :
    : ================================================================================
`;

exports[`range-1.js - {"endOfLine":"cr"} format 1`] = `
    : ====================================options=====================================
    : endOfLine: "cr"
    : parsers: ["babel"]
    : rangeEnd: 26
    : rangeStart: 10
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 |<LF>
  2 |<LF>
> 3 | class    a {<LF>
    |         ^^^^<LF>
> 4 |   b(   ) {}<LF>
    | ^^^^^^^^^^^<LF>
  5 | }<LF>
  6 |<LF>
  7 | let    x<LF>
  8 |
    : =====================================output=====================================
    : <CR>
    : <CR>
    : class a {<CR>
    :   b() {}<CR>
    : }<CR>
    : <CR>
    : let    x<CR>
    :
    : ================================================================================
`;

exports[`range-1.js - {"endOfLine":"crlf"} format 1`] = `
    : ====================================options=====================================
    : endOfLine: "crlf"
    : parsers: ["babel"]
    : rangeEnd: 26
    : rangeStart: 10
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 |<LF>
  2 |<LF>
> 3 | class    a {<LF>
    |         ^^^^<LF>
> 4 |   b(   ) {}<LF>
    | ^^^^^^^^^^^<LF>
  5 | }<LF>
  6 |<LF>
  7 | let    x<LF>
  8 |
    : =====================================output=====================================
    : <CRLF>
    : <CRLF>
    : class a {<CRLF>
    :   b() {}<CRLF>
    : }<CRLF>
    : <CRLF>
    : let    x<CRLF>
    :
    : ================================================================================
`;

exports[`range-1.js - {"endOfLine":"lf"} format 1`] = `
    : ====================================options=====================================
    : endOfLine: "lf"
    : parsers: ["babel"]
    : rangeEnd: 26
    : rangeStart: 10
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 |<LF>
  2 |<LF>
> 3 | class    a {<LF>
    |         ^^^^<LF>
> 4 |   b(   ) {}<LF>
    | ^^^^^^^^^^^<LF>
  5 | }<LF>
  6 |<LF>
  7 | let    x<LF>
  8 |
    : =====================================output=====================================
    : <LF>
    : <LF>
    : class a {<LF>
    :   b() {}<LF>
    : }<LF>
    : <LF>
    : let    x<LF>
    :
    : ================================================================================
`;

exports[`range-and-cursor-1.js - {"endOfLine":"auto"} format 1`] = `
    : ====================================options=====================================
    : cursorOffset: 22
    : endOfLine: "auto"
    : parsers: ["babel"]
    : rangeEnd: 27
    : rangeStart: 11
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 |<LF>
  2 |<LF>
  3 |<LF>
> 4 | class    a {<LF>
    |         ^^^^<LF>
> 5 |   b(  <|> ) {}<LF>
    | ^^^^^^^^^^^^^^<LF>
  6 | }<LF>
  7 |<LF>
  8 | let    x <LF>
  9 |
    : =====================================output=====================================
    : <LF>
    : <LF>
    : <LF>
    : class a {<LF>
    :   b(<|>) {}<LF>
    : }<LF>
    : <LF>
    : let    x <LF>
    :
    : ================================================================================
`;

exports[`range-and-cursor-1.js - {"endOfLine":"cr"} format 1`] = `
    : ====================================options=====================================
    : cursorOffset: 22
    : endOfLine: "cr"
    : parsers: ["babel"]
    : rangeEnd: 27
    : rangeStart: 11
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 |<LF>
  2 |<LF>
  3 |<LF>
> 4 | class    a {<LF>
    |         ^^^^<LF>
> 5 |   b(  <|> ) {}<LF>
    | ^^^^^^^^^^^^^^<LF>
  6 | }<LF>
  7 |<LF>
  8 | let    x <LF>
  9 |
    : =====================================output=====================================
    : <CR>
    : <CR>
    : <CR>
    : class a {<CR>
    :   b(<|>) {}<CR>
    : }<CR>
    : <CR>
    : let    x <CR>
    :
    : ================================================================================
`;

exports[`range-and-cursor-1.js - {"endOfLine":"crlf"} format 1`] = `
    : ====================================options=====================================
    : cursorOffset: 22
    : endOfLine: "crlf"
    : parsers: ["babel"]
    : rangeEnd: 27
    : rangeStart: 11
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 |<LF>
  2 |<LF>
  3 |<LF>
> 4 | class    a {<LF>
    |         ^^^^<LF>
> 5 |   b(  <|> ) {}<LF>
    | ^^^^^^^^^^^^^^<LF>
  6 | }<LF>
  7 |<LF>
  8 | let    x <LF>
  9 |
    : =====================================output=====================================
    : <CRLF>
    : <CRLF>
    : <CRLF>
    : class a {<CRLF>
    :   b(<|>) {}<CRLF>
    : }<CRLF>
    : <CRLF>
    : let    x <CRLF>
    :
    : ================================================================================
`;

exports[`range-and-cursor-1.js - {"endOfLine":"lf"} format 1`] = `
    : ====================================options=====================================
    : cursorOffset: 22
    : endOfLine: "lf"
    : parsers: ["babel"]
    : rangeEnd: 27
    : rangeStart: 11
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 |<LF>
  2 |<LF>
  3 |<LF>
> 4 | class    a {<LF>
    |         ^^^^<LF>
> 5 |   b(  <|> ) {}<LF>
    | ^^^^^^^^^^^^^^<LF>
  6 | }<LF>
  7 |<LF>
  8 | let    x <LF>
  9 |
    : =====================================output=====================================
    : <LF>
    : <LF>
    : <LF>
    : class a {<LF>
    :   b(<|>) {}<LF>
    : }<LF>
    : <LF>
    : let    x <LF>
    :
    : ================================================================================
`;
